# pydata-global-2023-functime

./: .cz.toml  .gitignore  README.md  justfile  package-lock.json  package.json  pyproject.toml  slides.md  style.css
.github/: dependabot.yml
.github/workflows/: deploy.yml
notebooks/: scalable-forecasting-with-functime.ipynb
