[project]
name = ""
version = ""
description = ""
authors = [
    {name = "baggiponte", email = "57922983+baggiponte@users.noreply.github.com"},
]
dependencies = [
    "functime>=0.9.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
ide = [
    "jupyterlab>=4.0.9",
]
dev = [
    "nbstripout>=0.6.1",
]
